feat: 调整openapi响应体改用model定义,为兼容yapi不能识别的问题
