# internal/rbac/service/route.go
@@ -18,19 +18,20 @@ func NewRoute(s *Service) *Route {
 }
 
 type Router interface {
-	GetById(ctx context.Context, id string) (*ports.RouteDetail, error)
-	List(ctx context.Context, params ports.GetRoutesParams) (*ports.RouteList, error)
+	GetById(ctx context.Context, id string) (*ports.RouteInfoResponse, error)
+	List(ctx context.Context, params ports.GetRoutesParams) (*ports.RouteListResponse, error)
 	DeleteById(ctx context.Context, id string) error
-	Update(ctx context.Context, params ports.PatchRoutesIdJSONBody, id string) (*ports.RouteDetail, error)
-	Create(ctx context.Context, params ports.PostRoutesJSONBody) (*ports.RouteDetail, error)
+	Update(ctx context.Context, params ports.PatchRoutesIdJSONBody, id string) (*ports.RouteInfoResponse, error)
+	Create(ctx context.Context, params ports.PostRoutesJSONBody) (*ports.RouteInfoResponse, error)
+	IsUnique(ctx context.Context, tenant string, uri string, method string) error
 }
 
-func (s *Route) GetById(ctx context.Context, id string) (*ports.RouteDetail, error) {
+func (s *Route) GetById(ctx context.Context, id string) (*ports.RouteInfoResponse, error) {
 	r := repo.NewRoute(s.Repo)
 	return r.GetById(ctx, id)
 }
 
-func (s *Route) List(ctx context.Context, params ports.GetRoutesParams) (*ports.RouteList, error) {
+func (s *Route) List(ctx context.Context, params ports.GetRoutesParams) (*ports.RouteListResponse, error) {
 	r := repo.NewRoute(s.Repo)
 	return r.List(ctx, params)
 }
@@ -40,12 +41,17 @@ func (s *Route) DeleteById(ctx context.Context, id string) error {
 	return r.DeleteById(ctx, id)
 }
 
-func (s *Route) Update(ctx context.Context, params ports.PatchRoutesIdJSONBody, id string) (*ports.RouteDetail, error) {
+func (s *Route) Update(ctx context.Context, params ports.PatchRoutesIdJSONBody, id string) (*ports.RouteInfoResponse, error) {
 	r := repo.NewRoute(s.Repo)
 	return r.Update(ctx, params, id)
 }
 
-func (s *Route) Create(ctx context.Context, params ports.PostRoutesJSONBody) (*ports.RouteDetail, error) {
+func (s *Route) Create(ctx context.Context, params ports.PostRoutesJSONBody) (*ports.RouteInfoResponse, error) {
 	r := repo.NewRoute(s.Repo)
 	return r.Create(ctx, params)
+}
+
+func (s *Route) IsUnique(ctx context.Context, tenant string, uri string, method string) error {
+	r := repo.NewRoute(s.Repo)
+	return r.IsUnique(ctx, tenant, uri, method)
 }
